--- a/vagrant/default/css/iphone.css
+++ b/vagrant/default/css/iphone.css
@@ -723,7 +723,7 @@ body {
     font-size: 14px;
     height: 426.5px;
     width: 210px;
-    top: -270px;
+    top: 120px;
     position: relative;
     margin-top: 35px;
     /*margin-left: auto;*/
